@@ -1,6 +1,7 @@
 Revision history for Crypt-Passphrase
 
 {{$NEXT}}
+          - Add a unicode normalization option
 
 0.006     2023-02-08 01:36:27+01:00 Europe/Amsterdam
           - Add Crypt::Passphrase::MD5::Hex
